@@ -12,8 +12,9 @@ LanguageTool Change Log
      word is no longer its part
     -removed spelling replacement pairs that made LT work very slowly
     -fixed a large number of false alarms
-    -added some new rules to handle common contextual misspellings and
-     redundant phrases as well as common grammatical mistakes 
+    -added new rules to handle common contextual misspellings and
+     redundant phrases as well as common grammatical mistakes. Now
+     the number of rules for English exceeds 1000. 
 
 -Polish:
     -cleaned up spelling rules and hyphenation rules, added some frequent
